--- a/Day2/contact.html
+++ b/Day2/contact.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Home</title>
+    <title>Contact</title>
     <link rel="icon" href="image/brandred.png" />
     <script
       src="https://kit.fontawesome.com/d0ff47b7d6.js"
